[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "hydrus_viewer"
version = "0.1.0"
authors = [
    {name = "Viktor Karpov", email = "v@vitka-k.ru"},
]
description = "Hydrus Viewer is a simple booru clone"
readme = "README.rst"
requires-python = ">=3.6"
keywords = ["hydrusnetwork", "hydrus-network", "booru"]
license = {text = "MIT"}
classifiers = [
    "Framework :: Flask",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "Flask",
    'hydrus-api',
]

[project.scripts]
hydrus_viewer = "hydrus_viewer.main:main"