[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "hydrus_viewer"
version = "0.1.1"
authors = [
    {name = "Viktor Karpov", email = "v@vitka-k.ru"},
]
description = "Hydrus Viewer is a simple booru clone"
readme = "README.md"
requires-python = ">=3.6"
keywords = ["hydrusnetwork", "hydrus-network", "booru"]
license = {text = "MIT"}
long_description_content_type='text/markdown'
classifiers = [
    "Framework :: Flask",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "Flask",
    'hydrus-api',
]

[project.scripts]
hydrus_viewer = "hydrus_viewer.main:main"